# UU-RAIL

./: .gitignore  CMakeLists.txt  Doxyfile  README
Examples/: CMakeLists.txt  test.cpp
ML/: PCA.cpp  PCA.h  node.cpp
ML/Kohonen/: Doxyfile
ML/Kohonen/src/: C_InputPattern.cpp  C_InputPattern.h  C_KohonenMap.h  support.h
Math/: Math.cpp  kmeans.cpp
Src/: CMakeLists.txt
Src/ML/: CMakeLists.txt  som.cpp
Src/ML/Include/: CMakeLists.txt  node.h  som.h
Src/ML/Kohonen/: README
Src/ML/Kohonen/src/: C_ClosestNode.cpp  C_ClosestNode.h  C_KohonenMap.cpp  C_Node.cpp  C_Node.h  strConvert.h  support.cpp
Src/Math/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Src/Math/Include/: Math.h
Src/Robot/: CMakeLists.txt
Src/Util/: CMakeLists.txt  MatrixFile.cpp  Socket.cpp  Socket.h
Src/Util/Include/: DynamicMatrixFile.h  FileNamer.h  Random.h  ServerSocket.h  assert.h
Src/Vision/: CMakeLists.txt  OCamCal.cpp  ocam_functions.cpp
Src/Vision/Include/: OCamCal.h  ocam_functions.h
Util/: DynamicMatrixFile.cpp  FileNamer.cpp  MatrixFile.h  Options.h  PPMVid.cpp  PPMVid.h  ServerSocket.cpp  clocking.c
Vision/: OcvImage.h
